--- a/clock/flip/index.html
+++ b/clock/flip/index.html
@@ -3,13 +3,16 @@
  * Created by Qian Chia on 02/20/2022.
 -->
 
+<!-- <!DOCTYPE html> -->
+
 <html>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <head>
 	<title>Flip Clock</title>
+
 	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<link rel="stylesheet" href="./style.css" media="screen" type="text/css" />
 	<link rel="stylesheet" href="../lib/css/font-awesome-4.3.0.min.css" />
@@ -18,6 +21,9 @@
 </head>
 
 <body>
+	<noscript>
+		<strong>We're sorry but this page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+	</noscript>
 	<div id="box">
 		<div id="content">
 			<div class="exitFullScreen" id="exitFullScreen">
@@ -82,8 +88,6 @@
 			})
 
 			function switchShowStyle() {
-				style = 3;
-				setLocalStorageData(styleKey, style);
 				showChineseStyle();
 			}
 
@@ -105,7 +109,8 @@
 
 			// 退出全屏
 			$("#exitFullScreen").on("click", function () {
-				pushBackPage(1);
+				exitFullscreen();
+				// showCentreStyle();
 			})
 		});
 
@@ -182,16 +187,30 @@
 
 		// 显示样式
 
+		function showCentreStyle() {
+			style = 0;
+			setLocalStorageData(styleKey, style);
+			pushBackPage(2);
+		}
+
 		function showChineseStyle() {
+			style = 3;
+			setLocalStorageData(styleKey, style);
+
 			window.location = "../chinese/index.html";
 		}
 
 		// 返回上一页
 		function pushBackPage(key) {
-			var isExitChineseStyleKey = "Clock-isExitChineseStyleKey";
-			setLocalStorageData(isExitChineseStyleKey, key);
+			var isExitComplexStyleKey = "Clock-isExitComplexStyle";
+			setLocalStorageData(isExitComplexStyleKey, key);
 
 			window.location.href = "..";
+		}
+
+		// 退出全屏 
+		function exitFullscreen() {
+			pushBackPage(1);
 		}
 
 		// 监听 window 是否全屏，并进行相应的操作,支持 esc 键退出
@@ -199,9 +218,12 @@
 			var isFull = !!(document.webkitIsFullScreen || document.mozFullScreen ||      // !document.webkitIsFullScreen 都为 true。因此用!!
 				document.msFullscreenElement || document.fullscreenElement
 			);
+			var isShowFullClockKey = "Clock-isShowFullClock";
 			if (isFull == false) {
 				pushBackPage(0);
+				setLocalStorageData(isShowFullClockKey, 0);
 			} else {
+				setLocalStorageData(isShowFullClockKey, 1);
 			}
 		}
 	</script>
