--- a/clock/index.html
+++ b/clock/index.html
@@ -24,23 +24,23 @@
 	<noscript>
 		<strong>We're sorry but this page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 	</noscript>
-	<div class="fill">
+	
+	<div class="action">
 		<div class="fullScreen" id="fullScreen">
 			<i class="fa fa-desktop" aria-hidden="true"></i>
 		</div>
 		<div class="exitFullScreen" id="exitFullScreen" style="display: none;">
 			<i class="fa fa-power-off" aria-hidden="true"></i>
 		</div>
-		<!-- <div class="exitFullScreen" id="exitFullScreen" style="display: none;">退出</div> -->
-
 		<div class="styleSwitch" id="styleSwitch" style="display: none;">
 			<i class="fa fa-exchange" aria-hidden="true"></i>
 		</div>
 		<div class="dateSwitch" id="dateSwitch" style="display: none;">
 			<i class="fa fa-eye" aria-hidden="true"></i>
 		</div>
+	</div>
 
-		<!-- <div class="clock" id="utility-clock" style="display: none;"> -->
+	<div class="fill">
 		<div class="clock" id="utility-clock">
 			<div class="centre" id="centre">
 				<div class="dynamic"></div>
