--- a/clock/chinese/index.html
+++ b/clock/chinese/index.html
@@ -25,14 +25,17 @@
     <noscript>
         <strong>We're sorry but this page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div class="exitFullScreen" id="exitFullScreen">
-        <i class="fa fa-power-off fa-1g" aria-hidden="true"></i>
-    </div>
-    <div class="styleSwitch" id="styleSwitch">
-        <i class="fa fa-exchange fa-1g" aria-hidden="true"></i>
-    </div>
-    <div class="dateSwitch" id="dateSwitch">
-        <i class="fa fa-eye" aria-hidden="true"></i>
+    
+    <div class="action">
+        <div class="exitFullScreen" id="exitFullScreen">
+            <i class="fa fa-power-off fa-1g" aria-hidden="true"></i>
+        </div>
+        <div class="styleSwitch" id="styleSwitch">
+            <i class="fa fa-exchange fa-1g" aria-hidden="true"></i>
+        </div>
+        <div class="dateSwitch" id="dateSwitch">
+            <i class="fa fa-eye" aria-hidden="true"></i>
+        </div>
     </div>
 
     <div id="app">
