Update clock page style

--- a/clock/chinese/index.html
+++ b/clock/chinese/index.html
@@ -139,9 +139,9 @@
                 switchShowStyle();
             })
 
-            $("#year").on("click", function () {
-                switchShowStyle();
-            })
+            // $("#year").on("click", function () {
+            //     switchShowStyle();
+            // })
 
             function switchShowStyle() {
                 showCentreStyle();
