--- a/clock/flip/index.html
+++ b/clock/flip/index.html
@@ -85,9 +85,9 @@
 				switchShowStyle();
 			})
 
-			$("#flipclock").on("click", function () {
-				switchShowStyle();
-			})
+			// $("#flipclock").on("click", function () {
+			// 	switchShowStyle();
+			// })
 
 			function switchShowStyle() {
 				showChineseStyle();
