--- a/clock/flip/index.html
+++ b/clock/flip/index.html
@@ -14,7 +14,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<link rel="stylesheet" href="./style.css" media="screen" type="text/css" />
+	<link rel="stylesheet" href="./index.css" media="screen" type="text/css" />
 	<link rel="stylesheet" href="../lib/css/font-awesome-4.3.0.min.css" />
 
 	<script src="../lib/js/jquery-3.1.1.min.js"></script>
