--- a/clock/index.html
+++ b/clock/index.html
@@ -14,7 +14,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 
-	<link rel="stylesheet" href="./style.css" media="screen" type="text/css" />
+	<link rel="stylesheet" href="./index.css" media="screen" type="text/css" />
 	<link rel="stylesheet" href="./lib/css/font-awesome-4.3.0.min.css" />
 
 	<script src="./lib/js/jquery-3.1.1.min.js"></script>
