Update style.css files name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <title>Qian Chia's Clock</title>
 
-    <link rel="stylesheet" href="./clock/style.css" media="screen" type="text/css" />
+    <link rel="stylesheet" href="./clock/index.css" media="screen" type="text/css" />
     <link rel="stylesheet" href="./clock/lib/css/font-awesome-4.3.0.min.css" />
     <link rel="stylesheet" href="./clock/lib/css/bootstrap-3.3.7.min.css" />
 
