Add show lunar dates

--- a/clock/flip/index.html
+++ b/clock/flip/index.html
@@ -44,8 +44,9 @@
 		</div>	
 	</div>
 
-	<script src="./index.js"></script>
 	<script src="../lib/js/until.js"></script>
+	<script src="./index.js"></script>
+
 	<script type="text/javascript">
 		// mobile
 		// if(/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
@@ -58,6 +59,7 @@
 		var clock;
 		var styleKey = "Clock-style";
 		var isShowDates = 1;
+		var isShowLunarDates = 0;
 		var isShowDatesKey = "Clock-isShowDates";
 		var isShowFullClockKey = "Clock-isShowFullClock";
 
@@ -110,6 +112,20 @@
 				}
 			})
 
+			// 日期样式切换
+
+			$("#ShowDate").on("click", function () {
+				switch (isShowLunarDates) {
+					case 0:
+						isShowLunarDates = 1;
+						break;
+					case 1:
+						isShowLunarDates = 0;
+						break;
+				}
+				updateDates();
+			})
+
 			// 退出全屏
 			$("#exitFullScreen").on("click", function () {
 				exitFullscreen();
@@ -155,9 +171,16 @@
 			var month = ['Jan.', 'Feb.', 'Mar.', 'Apr.', 'May', 'June', 'Jul.', 'Aug.', 'Sept.', 'Oct.', 'Nov.', 'Dec.'];
 			var week = ['Sun.', 'Mon.', 'Tues.', 'Wed.', 'Thur.', 'Fri.', 'Sat.'];
 			var d = new Date();
-			document.getElementById('ShowDate').innerHTML = ((d.getMonth() + 1) < 10 ? ('0' + (d.getMonth() + 1)) : (d.getMonth() + 1)) + "月"
-				+ (d.getDate() < 10 ? ('0' + d.getDate()) : d.getDate()) + "日"
-				+ ' 星期' + '日一二三四五六'.charAt(new Date().getDay());
+
+			var month = ((d.getMonth() + 1) < 10 ? ('0' + (d.getMonth() + 1)) : (d.getMonth() + 1)) + "月";
+			var day = (d.getDate() < 10 ? ('0' + d.getDate()) : d.getDate()) + "日";
+			
+			if (isShowLunarDates == 1) {
+				month = formatDateM_lunar_A(d);
+				day = formatDateD_lunar_A(d);
+			}
+
+			document.getElementById('ShowDate').innerHTML = month + day + ' 星期' + '日一二三四五六'.charAt(new Date().getDay());
 			// document.getElementById('ShowDate').innerHTML = week[d.getDay()] + " " + month[d.getMonth()] + " " + d.getDate() + ", " + d.getFullYear();
 		}
 
