--- a/clock/index.html
+++ b/clock/index.html
@@ -286,6 +286,8 @@
 				initialStyle();
 				setLocalStorageData(isShowFullClockKey, 1);
 			}
+
+			initialIsShowDates();
 		}
 
 		// 显示样式
@@ -334,13 +336,18 @@
 		// 是否显示日期
 
 		function initialIsShowDates() {
-			switch (isShowDates) {
-				case 0:
-					hideDates();
-					break;
-				case 1:
-					showDates();
-					break;
+			let isShowFullClock = getLocalStorageData(isShowFullClockKey);
+			if (isShowFullClock == 1) {
+				switch (isShowDates) {
+					case 0:
+						hideDates();
+						break;
+					case 1:
+						showDates();
+						break;
+				}
+			} else {
+				showDates();
 			}
 		}
 
